WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271113
[IFC][Intrinsic width] Incorrect shrink-to-fit box logical width when negative text-indent is present
https://bugs.webkit.org/show_bug.cgi?id=271113
Summary
[IFC][Intrinsic width] Incorrect shrink-to-fit box logical width when negativ...
alan
Reported
2024-03-16 09:41:37 PDT
ssia
Attachments
Patch
(5.65 KB, patch)
2024-03-16 10:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(6.04 KB, patch)
2024-03-16 14:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-16 09:42:54 PDT
<
rdar://problem/124784190
>
alan
Comment 2
2024-03-16 10:10:01 PDT
Created
attachment 470398
[details]
Patch
alan
Comment 3
2024-03-16 14:03:43 PDT
Created
attachment 470400
[details]
[fast-cq]Patch
EWS
Comment 4
2024-03-16 16:48:23 PDT
Committed
276246@main
(b2ec60c7d5b8): <
https://commits.webkit.org/276246@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470400
[details]
.
alan
Comment 5
2024-03-17 05:47:26 PDT
***
Bug 141120
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug